--- a/api-accessed/individual-graphs.html
+++ b/api-accessed/individual-graphs.html
@@ -3,15 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Visualize API Data with Bar Charts</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style_individual.css">
 
 </head>
 <body>
 <!-- partial:index.partial.html -->
 <script src="https://cdn.anychart.com/releases/8.0.0/js/anychart-base.min.js"></script>
-<div id="container"></div>
+<div id="container1"></div>
+<div id="container2"></div>
+<div id="container3"></div>
+<div id="container4"></div>
 <!-- partial -->
-  <script  src="./script.js"></script>
+  <script  src="./script_individual.js"></script>
 
 </body>
 </html>
