--- a/api-accessed/individual-graphs.html
+++ b/api-accessed/individual-graphs.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Visualize API Data with Bar Charts</title>
-  <link rel="stylesheet" href="./style_individual.css">
+  <link rel="stylesheet" href="./css/style_individual.css">
 
 </head>
 <body>
@@ -14,7 +14,7 @@
 <div id="container3"></div>
 <div id="container4"></div>
 <!-- partial -->
-  <script  src="./script_individual.js"></script>
+  <script  src="./js/script_individual.js"></script>
 
 </body>
 </html>
