--- a/api-accessed/consolidated-graph.html
+++ b/api-accessed/consolidated-graph.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Visualize API Data with Bar Charts</title>
-  <link rel="stylesheet" href="./style_consolidated.css">
+  <link rel="stylesheet" href="./css/style_consolidated.css">
 
 </head>
 <body>
@@ -11,7 +11,7 @@
 <script src="https://cdn.anychart.com/releases/8.0.0/js/anychart-base.min.js"></script>
 <div id="container"></div>
 <!-- partial -->
-  <script  src="./script_consolidated.js"></script>
+  <script  src="./js/script_consolidated.js"></script>
 
 </body>
 </html>
